--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,11 @@
 
 body {
     /* https://coolors.co/generate and click export -> scss to get the colors to copy and paste below*/
-    /* --color1: hsla(349, 69%, 76%, 1);
-    --color2: hsla(207, 67%, 44%, 1);
-    --color3: hsla(200, 61%, 56%, 1);
-    --color4: hsla(187, 41%, 94%, 1);
-    --color5: hsla(170, 28%, 95%, 1); */
+    --color1: rgb(238, 241, 10);
+    --color2: rgb(4, 51, 22);
+    --color3: rgb(95, 7, 7);
+    --color4: rgb(223, 210, 41);
+    --color5: rgb(16, 39, 90); 
 
     /* --color1: hsla(45, 86%, 83%, 1);
     --color2: hsla(135, 65%, 98%, 1);
@@ -29,9 +29,17 @@ main {
     align-items: center;
     margin-bottom: calc(var(--footer-height));
 }
-
+.duck{
+    width: 100%;
+    height: auto;
+}
+.weasley{
+    width: 50%;
+    height: auto;
+}
 section {
     background-color: var(--color5);
+    color:whitesmoke;
     width: 1000px;
     max-width: 80%;
     display: flex;
