--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ body {
     --color2: rgb(156, 156, 156);
     --color3: rgb(255, 255, 255);
     --color4: rgb(255, 255, 250);
-    --color5: rgb(1, 77, 30); 
+    --color5: rgb(242,239,191); 
 
     /* --color1: hsla(45, 86%, 83%, 1);
     --color2: hsla(135, 65%, 98%, 1);
@@ -28,14 +28,18 @@ main {
     justify-content: center;
     align-items: center;
     margin-bottom: calc(var(--footer-height));
+    background-color: #eef;
 }
 .duck{
-    width: 100%;
-    height: auto;
+    width: 650px;
+    height: 509px;
+    border-radius: 20%;
 }
+
 .weasley{
     width: 50%;
     height: auto;
+    border-radius: 20%;
 }
 section {
     background-color: var(--color5);
@@ -50,7 +54,7 @@ section {
     padding-bottom: var(--gutter);
     margin-top: var(--gutter);
     margin-bottom: var(--gutter);
-    border: solid 2px var(--color1);
+    border: solid 2px #06b;
 }
 
 header {
@@ -59,6 +63,7 @@ header {
     background-color: var(--color3);
     height: var(--header-height);
     box-shadow: var(--shadow);
+    background-color: #0067a8;
 }
 
 footer {
@@ -72,6 +77,11 @@ footer {
 h2 {
     font-size: 1.8rem;
     font-weight: bold;
+    color:black;
+}
+
+h3{
+    color:black;
 }
 
 .gutter-right {
@@ -89,6 +99,13 @@ header img {
 
 p {
     margin: var(--gutter);
+    background-color:thistle;
+    color: black;
+    border-radius: 1%;
+}
+
+cite{
+    background-color:rgb(242,239,191) ;
 }
   
 footer {
@@ -120,17 +137,19 @@ footer {
     }
 
   }
- .quiz{
-     background-color: hsl(46, 81%, 50%);
-     color:black 100px;
+ .quiz, .button{
+     background-color: #06b;
+     color:thistle;
      border-radius: 10px;
      cursor:pointer;
      box-shadow: burlywood;
      transition: all .2s ease-in-out;
 }
 
-.quiz:hover{
-transform: scale(1.4);
+.quiz:hover, .button:hover{
+    transform: scale(1.2);
+    background-color:thistle;
+    color: #06b;
 }
  
  
